prevents city names in dropdown from wrapping

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -33,6 +33,8 @@
     position: absolute;
     z-index: 1;
     max-height: 300px;
+    width: 200px;
+    white-space: nowrap;
     overflow: scroll;
 }
 .city-wrapper > a {
